src/objects/FoodMenu__c.object
<CustomObject>
    <description>Master Cuisine and Drink</description>
    <fields>
        <fullName>Category1__c</fullName>
        <inlineHelpText>コース料理、会席料理、単品料理</inlineHelpText>
        <label>カテゴリ１</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>コース</fullName>
                </value>
                <value>
                    <fullName>アラカルト</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category2__c</fullName>
        <label>カテゴリ２</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>通常</fullName>
                </value>
                <value>
                    <fullName>特別</fullName>
                </value>
                <value>
                    <fullName>お子様限定</fullName>
                </value>
                <value>
                    <fullName>冬期限定</fullName>
                </value>
                <value>
                    <fullName>朝食</fullName>
                </value>
                <value>
                    <fullName>アラカルト</fullName>
                </value>
                <value>
                    <fullName>秋期限定</fullName>
                </value>
                <value>
                    <fullName>夏期限定</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>金額</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Image123__c</fullName>
        <label>Image</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Morning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>朝食 7:30〜または8:30〜</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalId>true</externalId>
        <label>Name</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipName>mealgoaT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seq__c</fullName>
        <label>Seq#</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>X11_30_14_00_LO__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>料理を出せる時間帯</inlineHelpText>
        <label>昼食 11：30〜14：00(LO)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X14_00_17_00__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>軽食を出せる時間帯</inlineHelpText>
        <label>軽食 14：00〜17：00</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X17_00_20_00_LO__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>お料理を出せる時間帯</inlineHelpText>
        <label>夕食 17：00〜20：00(LO)</label>
        <type>Checkbox</type>
    </fields>
    <label>お料理</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>Meal</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>